welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:37: error: not found: type color
def L1F(c:color) {
          ^